--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       const phone = '5491162315972';
       const message = encodeURIComponent('Quiero jugar con mi bono del 50%');
       window.location.href = https://wa.me/${phone}?text=${message};
-    }, 2);
+    }, 2000); // 2000 milisegundos = 2 segundos
   </script>
 </head>
 <body>
