--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     setTimeout(function () {
       const phone = '5491162315972';
       const message = encodeURIComponent('Quiero jugar con mi bono del 50%');
-      window.location.href = https://wa.me/${phone}?text=${message};
+      window.location.href = "https://wa.me/${phone}?text=${message}";
     }, 2000); // 2000 milisegundos = 2 segundos
   </script>
 </head>
