--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Redirigiendo a WhatsApp...</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #25D366; /* WhatsApp green */
+      background-color: #25D366;
       color: white;
       display: flex;
       flex-direction: column;
@@ -22,7 +23,7 @@
     .logo {
       width: 80px;
       margin-bottom: 20px;
-      animation: bounce 1s infinite alternate;
+      animation: bounce 1s infinite;
     }
 
     @keyframes bounce {
@@ -40,14 +41,14 @@
     setTimeout(function () {
       const phone = '5491162315972';
       const message = encodeURIComponent('Quiero jugar con mi bono del 50%');
-      window.location.href = "https://wa.me/${phone}?text=${message}";
-    }, 2000); // 2000 milisegundos = 2 segundos
+      window.location.href = `https://wa.me/${phone}?text=${message}`;
+    }, 2000);
   </script>
 </head>
 <body>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp logo" class="logo">
+  <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Logo" />
   <div class="message">
-    Conectando con WhatsApp...<br/>
+    Conectando con WhatsApp...<br />
     ¡Te llevamos con tu bono del 50%!
   </div>
 </body>
