--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <script>
     setTimeout(function () {
       const phone = '5491162315972';
-      const message = encodeURIComponent('Quiero jugar con mi bono del 50%');
+      const message = `Bienvenidos%20a%20Grupo%20Tit%C3%A1n%2C%20la%20plataforma%20donde%20est%C3%A1n%20todas%20las%20plataformas%20%F0%9F%8E%B0.%0A%F0%9F%9A%A8%20Carga%20m%C3%ADnima%20%242000%0A%F0%9F%9A%A8%20Retiro%20m%C3%ADnimo%20%245000%0AArmamos%20tu%20usuario%3F%20%F0%9F%98%8A%0ATienes%2050%25%20de%20bonificaci%C3%B3n%20por%20primera%20carga%20%F0%9F%98%89`;
       window.location.href = `https://api.whatsapp.com/send?phone=${phone}&text=${message}`;
     }, 2000);
   </script>
